--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
+gunicorn==20.0.4
 oauthlib==3.1.0
 Pillow==8.1.1
 psycopg2-binary==2.8.6
