--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.3.1
+boto3==1.17.34
+botocore==1.20.34
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
+django-storages==1.11.1
 gunicorn==20.0.4
+jmespath==0.10.0
 oauthlib==3.1.0
 Pillow==8.1.1
 psycopg2-binary==2.8.6
@@ -10,4 +14,5 @@ PyJWT==2.0.1
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
+s3transfer==0.3.6
 sqlparse==0.4.1
