--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ botocore==1.20.34
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
+django-crispy-forms==1.11.2
 django-storages==1.11.1
 gunicorn==20.0.4
 jmespath==0.10.0
